lil changes on train

--- a/app/views/home/FAQ.html.erb
+++ b/app/views/home/FAQ.html.erb
@@ -1,2 +1,10 @@
-<h1>Home#FAQ</h1>
-<p>Find me in app/views/home/FAQ.html.erb</p>
+<h1><u>FAQ</u></h1>
+<div class="faq"><h3>What are your store's hours?</h3><p></p></div>
+<div class="faq"><h3>What is your store's redemption policy?</h3><p></p></div>
+<div class="faq"><h3>Do you make home delivery's</h3><p></p></div>
+<div class="faq"><h3>Do you sell kegs?</h3><p></p></div>
+<div class="faq"><h3>Do you sell liquor?</h3><p></p></div>
+<div class="faq"><h3>I didn't see a particular beer I was looking for, can you get it?</h3><p></p></div>
+<div class="faq"><h3>I own a business, how do I open a wholesale account?></h3><p></p></div>
+<div class="faq"><h3></h3><p></p></div>
+<div class="faq"><h3></h3><p></p></div>
