--- a/app/views/home/specials.html.erb
+++ b/app/views/home/specials.html.erb
@@ -1,2 +1,24 @@
-<h1>Home#specials</h1>
+<h1>Specials</h1>
 <p>Find me in app/views/home/specials.html.erb</p>
+<div class="special"><p></p></div>
+<div class="special"><p></p></div>
+<div class="special"><p></p></div>
+<div class="special"><p></p></div>
+<div class="special"><p></p></div>
+<div class="special"><p></p></div>
+<div class="special"><p></p></div>
+<div class="special"><p></p></div>
+<div class="special"><p></p></div>
+<div class="special"><p></p></div>
+<div class="special"><p></p></div>
+<div class="special"><p></p></div>
+<div class="special"><p></p></div>
+<div class="special"><p></p></div>
+<div class="special"><p></p></div>
+<div class="special"><p></p></div>
+<div class="special"><p></p></div>
+<div class="special"><p></p></div>
+<div class="special"><p></p></div>
+<div class="special"><p></p></div>
+
+
