--- a/app/views/home/FAQ.html.erb
+++ b/app/views/home/FAQ.html.erb
@@ -1,7 +1,9 @@
 <h1><u>FAQ</u></h1>
 <section>
 <div class="faq">
-<h3>What are your store's hours?</h3>
+	<div class="expander">
+	  <a href="javascript:void(0)" id="js-expander-trigger" class="expander-trigger expander-hidden"><h3>What are your store's hours?</h3></a>
+	  <div id="js-expander-content" class="expander-content">
 	<p> We are open 7 days a week!
      	<ol>
      		<li> Monday thru Friday 10am - 9pm</li>
@@ -9,37 +11,75 @@
      		<li> Sunday  11am - 6pm </li>
      	</ol>
      </p>
+     </div>
+     </div>
 </div>
 <div class="faq">
-<h3>What is your store's redemption policy?</h3>
-	<p> It seemes these days everybody wants to do right environmentally. VSBC does its part by proudly recylcing bottles and cans.
+	<div class="expander">
+	  <a href="javascript:void(0)" id="js-expander-trigger-1" class="expander-trigger expander-hidden"><h3>What is your store's redemption policy?</h3></a>
+	  <div id="js-expander-content-1" class="expander-content">
+		<p> It seemes these days everybody wants to do right environmentally. VSBC does its part by proudly recylcing bottles and cans.
 
-	You pay a bottle or can deposit when you buy soda, beer, and water. When you bring us your empties, you not only are putting that money back in your own pocket, but you're doing your part for the earth. We will glady take back any empty beverage's we sell.  We take back empties anyday during our business hours EXCEPT Sunday!  See ya soon! 
-	</p>
+		You pay a bottle or can deposit when you buy soda, beer, and water. When you bring us your empties, you not only are putting that money back in your own pocket, but you're doing your part for the earth. We will glady take back any empty beverage's we sell.  We take back empties anyday during our business hours EXCEPT Sunday!  See ya soon! 
+		</p>
+		</div>
+		</div>
 </div>
-<div class="faq"><h3>Do you make home delivery's</h3>
+<div class="faq">
+<div class="expander">
+	  <a href="javascript:void(0)" id="js-expander-trigger-2" class="expander-trigger expander-hidden"><h3>Do you make home delivery's?</h3></a>
+	  <div id="js-expander-content-2" class="expander-content">
 	<p> Please contact us or place an order online <%= link_to 'order', home_order_path %> and we will get
 	back to you ASAP.  Typically we will deliver same day if the order is over a 100$ and within 10 miles of our location. Feel free to check our low prices <a href="https://www.beermenus.com/places/5375-valley-stream-discount-beverage-center">price list</a>
 	</p>
+	</div>
+	</div>
 </div>
-<div class="faq"><h3>Do you sell kegs?</h3>
+<div class="faq">
+<div class="expander">
+	  <a href="javascript:void(0)" id="js-expander-trigger-3" class="expander-trigger expander-hidden"><h3>Do you sell kegs?</h3></a>
+	  <div id="js-expander-content-3" class="expander-content">
 	<p>Absolutely!  Please give us 24 hour notice!  There is also a 50$ deposit required as well for tap/keg and bucket. <a href="/">keg pricing</a>
 	</p>
+	</div>
+	</div>
 </div>
-<div class="faq"><h3>Do you sell liquor?</h3>
+<div class="faq">
+<div class="expander">
+	  <a href="javascript:void(0)" id="js-expander-trigger-4" class="expander-trigger expander-hidden"><h3>Do you sell liquor?</h3></a>
+	  <div id="js-expander-content-4" class="expander-content">
 	<p>New York state law doesn't allow for Beer and Liquor to be sold in same establishment! Sorry!
 	</p>
+	</div>
+	</div>
 </div>
-<div class="faq"><h3>I didn't see a particular beer I was looking for, can you get it?</h3>
+<div class="faq">
+	<div class="expander">
+	  <a href="javascript:void(0)" id="js-expander-trigger-5" class="expander-trigger expander-hidden"><h3>I didn't see a particular beer I was looking for, can you get it?</h3></a>
+	  <div id="js-expander-content-5" class="expander-content">
 	<p>Yes. Special orders are no problem at all. If you know of a hard-to-find beverage that even we don't have, we can probably get it for you. Please don't hesitate to contact us <%= link_to 'contact' , home_contact_path %></a>
 		</p>
+		</div>
+		</div>
 </div>
-<div class="faq"><h3>I own a business, how do I open a wholesale account?</h3>
+<div class="faq">
+<div class="expander">
+	  <a href="javascript:void(0)" id="js-expander-trigger-6" class="expander-trigger expander-hidden"><h3>I own a business, how do I open a wholesale account?</h3></a>
+	  <div id="js-expander-content-6" class="expander-content">
 <p> Our class "C" license gives us the unique privledge to offer low pricing on both wholesale and retail customers.  Opening a wholesale account doesn't take long time we would require a few pieces of information as well as your tax id #.  If interested please fill out this small <a href="/wholesale">form</a></p>
+		</div>
+		</div>
 </div>
-<div class="faq"><h3>Do you guys carry seasonal beers?</h3>
+<div class="faq">
+<div class="expander">
+	  <a href="javascript:void(0)" id="js-expander-trigger-7" class="expander-trigger expander-hidden"><h3>Do you guys carry seasonal beers?</h3></a>
+	  <div id="js-expander-content-7" class="expander-content">
 	<p>We've got 'em! Whether it's a summer ale or a winter holiday lager, VSBC is the place to find those seasonal brews. <a href="https://www.beermenus.com/places/5375-valley-stream-discount-beverage-center">current stock</a> or if not listed feel free to make a <%= link_to 'request', home_new_path %>
 	</p>
+	</div>
+	</div>
 </div>
 <div class="faq"><h3></h3><p></p></div>
 </section>
+
+  
