added a few forms set corp params

--- a/app/views/home/FAQ.html.erb
+++ b/app/views/home/FAQ.html.erb
@@ -39,7 +39,8 @@
 <div class="expander">
 	  <a href="javascript:void(0)" id="js-expander-trigger-3" class="expander-trigger expander-hidden"><h3>Do you sell kegs?</h3></a>
 	  <div id="js-expander-content-3" class="expander-content">
-	<p>Absolutely!  Please give us 24 hour notice!  There is also a 50$ deposit required as well for tap/keg and bucket. <a href="/">keg pricing</a>
+	<p>Absolutely!  Please give us 24 hour notice!  There is also a 50$ deposit required as well for tap/keg and bucket. <%= link_to 'keg pricing', home_keg_path %>
+	
 	</p>
 	</div>
 	</div>
