--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -1,2 +1,6 @@
-<h1>Home#contact</h1>
-<p>Find me in app/views/home/contact.html.erb</p>
+<div class="contact">
+<h1>Contact Us</h1>
+<%= render 'email' %>
+</div>
+
+
