--- a/app/views/home/corporate.html.erb
+++ b/app/views/home/corporate.html.erb
@@ -1,31 +1,5 @@
-<H1> Please fill out application! Thanks!</H1>
-<div id="corp app">
-<%= form_for home_corporate_path, remote: true, :authenticity_token => true do |f| %>
-
-<p class='corp'>
-		<%= f.label :tax_id_number %>
-		<%= f.text_field :taxid %>
-	</p>
-	
-	<p class='corp'>
-		<%= f.label :company_name %>
-		<%= f.text_field :companyname %>
-	</p>
-	<p class='corp'>
-		<%= f.label :address %>
-		<%= f.text_field :address %>
-		</p>
-
-	<p class='corp'>
-		<%= f.label :owner %>
-		<%= f.text_field :owner %>
-</p>
-		<p class='corp'><%= f.submit 'Create', class: 'post_submit', data: {disable_with: "Submitting..."} %></p>
-<% end %>
+<div class="corpacct">
+<h1>Please fill out application! Thanks!</h1>
+<%= render 'corp' %>
 </div>
 
-<!-- 
-t.string   "taxid"
-    t.string   "companyname"
-    t.string   "address"
-    t.string   "owner" -->
