home page added more styling

--- a/app/views/corporates/_corp.html.erb
+++ b/app/views/corporates/_corp.html.erb
@@ -1,5 +1,5 @@
 <div id="corp app">
-<%= form_for home_corporate_path, remote: true, :authenticity_token => true do |f| %>
+<%= form_for @corp do |f| %>
 
 <p class='corp'>
 		<%= f.label :tax_id_number %>
