--- a/app/views/home/products.html.erb
+++ b/app/views/home/products.html.erb
@@ -1,4 +1,31 @@
 <h1>Products</h1>
+<div class="beerlogos">
+		<%= image_tag "amstel.jpeg", width: "50px", :id =>"amstel" %>
+		<%= image_tag "bluemoon.jpeg", width: "50px", :id =>"bluemoon" %>
+		<%= image_tag "brooklyn.jpeg", width: "50px", :id =>"brooklyn" %>
+		<%= image_tag "budlt.jpeg", width: "50px", :id =>"budlt" %>
+		<%= image_tag "bud.jpg", width: "50px", :id =>"bud" %>
+		<%= image_tag "coorslt.jpeg", width: "50px", :id =>"coorslt" %>
+		<%= image_tag "foster.jpeg", width: "50px", :id =>"foster" %>
+		<%= image_tag "weihenstephan.jpeg", width: "50px", :id =>"weihenstephan" %>
+		<%= image_tag "samadams.jpeg", width: "50px", :id =>"samadams" %>
+		<%= image_tag "miller.jpeg", width: "50px", :id =>"miller" %>
+		<%= image_tag "stella.png", width: "50px", :id =>"stella" %>
+		<%= image_tag "corona.png", width: "50px", :id =>"corona" %>
+		<%= image_tag "guinness.png", width: "50px", :id =>"guinness" %>
+		<%= image_tag "newcastle.jpeg", width: "50px", :id =>"newcastle" %>
+		<%= image_tag "pbr.jpeg", width: "50px", :id =>"pbr" %>
+		<%= image_tag "redstripe.jpeg", width: "50px", :id =>"redstripe" %>
+		<%= image_tag "peroni.jpeg", width: "50px", :id =>"peroni" %>
+		<%= image_tag "carib.jpeg", width: "50px", :id =>"carib" %>
+		<%= image_tag "banks.jpeg", width: "50px", :id =>"banks" %>
+		<%= image_tag "guinblonde.jpeg", width: "50px", :id =>"guinblonde" %>
+		<%= image_tag "rollingrock.jpeg", width: "50px", :id =>"rollingrock" %>
+		<%= image_tag "anchor.jpeg", width: "50px", :id =>"anchor" %>
+		<%= image_tag "becks.jpeg", width: "50px", :id =>"becks" %>
+		<%= image_tag "grolsch.jpeg", width: "50px", :id =>"grolsch" %>
+	
+</div>
 <div id="heinbtl"><%= image_tag("heinekenbtl.jpg", :id =>"hb") %></div>
 <div id="coronabtl"><%= image_tag("coronabtl.jpg", :id=>"cb") %></div>
 	<h3>
