--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -398,17 +398,208 @@ header.navigation {
     }
   }
 }
-#hb {transition-timing-function: cubic-bezier(0.1, 0.7, 1.0, 0.1);}
-#facebook {float: right;
-			@include backface-visibility(visible);}
-#fb:hover {
-  // Animation shorthand works the same as the CSS3 animation shorthand
-  @include animation(scale 1.0s ease-in, slide 2.0s ease);
+#amstel:hover { width: 150px;}
+#anchor:hover { width: 150px;}
+#banks:hover { width: 150px;}
+#becks:hover { width: 150px;}
+#bluemoon:hover { width: 150px;}
+#brooklyn:hover { width: 150px;}
+#bud:hover { width: 150px;}
+#budlt:hover { width: 150px;}
+#carib:hover { width: 150px;}
+#coorslt:hover { width: 150px;}
+#corona:hover { width: 150px;}
+#foster:hover { width: 150px;}
+#grolsch:hover { width: 150px;}
+#guinblonde:hover { width: 150px;}
+#heineken:hover { width: 150px;}
+#miller:hover { width: 150px;}
+#newcastle:hover { width: 150px;}
+#pbr:hover { width: 150px;}
+#peroni:hover { width: 150px;}
+#redstripe:hover { width: 150px;}
+#rollingrock:hover { width: 150px;}
+#samadams:hover { width: 150px;}
+#weihenstephan:hover { width: 150px;}
+#stella:hover { width: 150px;}
+#sapporo:hover { width: 150px;}
+#guinness:hover { width: 150px;}
+#vsbc:hover { width: 150px; height: 350px;}
+#hb {animation-timing-function: linear;}
+
+
+#facebook {
+  position: absolute;
+  top: 15px;
+  left: 15px;
+}
+
+#beermenu {
+  position: absolute;
+  top: 15px;
+  right: 15px;
+}
+
+
+// #vslogo {margin: 0 auto;}
+div#vslogo {
+    margin-left: auto;
+    margin-right: auto;
+    width: 10em;}
+    //footer code//
+    .footer {
+  $base-spacing: 1.5em !default;
+  $action-color: #477DCA !default;
+  $medium-screen: em(640) !default;
+  $large-screen: em(860) !default;
+  $footer-background: desaturate(darken($action-color, 20%), 30%);
+  $footer-color: white;
+  $footer-link-color: transparentize($footer-color, 0.6);
+  $footer-disclaimer-color: transparentize($footer-color, 0.6);
+
+  background: $footer-background;
+  padding: ($base-spacing * 2) $gutter;
+  width: 100%;
+
+  .footer-logo {
+    margin-bottom: 2em;
+    text-align: center;
+
+    img {
+      height: 3em;
+    }
+  } 
+
+  .footer-links {
+    @include display(flex);
+    @include justify-content(center);
+    @include flex-wrap(wrap);
+    margin-bottom: $base-spacing;
+  }
+
+  ul {
+    @include flex-basis(13em);
+    @include flex-shrink(0);
+    margin-bottom: $base-spacing * 2;
+    padding: 0;
+  }
+
+  li {
+    line-height: 1.5em;
+    list-style: none;
+    text-align: center;
+  }
+
+  li a {
+    color: $footer-link-color;
+    text-decoration: none;
+
+    &:focus,
+    &:hover {
+      color: transparentize($footer-color, 0);
+    }
+  }
+
+  li h3 {
+    color: $footer-color;
+    font-size: 1em;
+    margin-bottom: 0.4em;
+  }  
+
+  hr {
+    border: 1px solid transparentize($footer-disclaimer-color, 0.3);
+    margin: 0 auto $base-spacing;
+    width: 12em;
+  }
+
+  p {
+    color: $footer-disclaimer-color;
+    font-size: 0.9em;
+    line-height: 1.5em;
+    margin: auto;
+    max-width: 35em;
+    text-align: center;
+  }
+}
+//side image on home page
+.side-image {  
+  $base-line-height: 1.5em !default;
+  $action-color: #477DCA !default;
+  $dark-gray: #333 !default;
+  $large-screen: em(860) !default;
+  $base-font-color: $dark-gray !default;
+  $side-image-background-top: #B5EBEB;
+  $side-image-background-bottom: #5DAC5D;
+  $side-image-content-background: #F9F9F9;
+  $side-image-border: 1px solid darken(transparentize($side-image-background-bottom, 0.8), 30%);
+
+  background: $side-image-content-background;
+
+  @include media($large-screen) {
+    @include row(table);
+  }
+
+  .images-wrapper {
+    @include background(url('https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/mountains.png'), linear-gradient($side-image-background-top, $side-image-background-bottom), no-repeat $side-image-background-top scroll);
+    background-color: $side-image-background-top;
+    background-size: cover;
+    border-bottom: $side-image-border;
+    display: block;
+    min-height: 12em;
+    padding: 3em;
+
+    @include media($large-screen) {
+      @include span-columns(4);
+      background-position: bottom;
+      background-size: cover;
+      border-right: $side-image-border;
+    }
+  }
+
+  .side-image-content {
+    @include span-columns(12);
+    padding: 1em 1em 4em 1em;
+
+    @include media($large-screen) {
+      @include span-columns(8);
+      padding: 4em 4em 8em 4em;
+    }
+
+    h1 {
+      margin-bottom: 0.9em;
+    }
+
+    h4 {
+      background: #BBB;
+      color: white;
+      display: inline-block;
+      font-size: 0.75em;
+      margin-bottom: 1.3em;
+      padding: 3px 8px;
+      text-transform: uppercase;
+    }
+
+    p {
+      color: $base-font-color;
+      line-height: $base-line-height;
+      margin-bottom: 3em;
+    }
+  }
+
+  @include reset-display();
+}
+
+
+
+//.faqstyle p {background-color: blue;}
+// #fb:hover {
+//   // Animation shorthand works the same as the CSS3 animation shorthand
+//   @include animation(scale 1.0s ease-in, slide 2.0s ease);
 
   // The above outputs the same CSS as using independent, granular mixins.
-  @include animation-name(scale, slide);
-  @include animation-duration(2s);
-  @include animation-timing-function(ease);
-  @include animation-iteration-count(infinite);}
+  // @include animation-name(scale, slide);
+  // @include animation-duration(2s);
+  // @include animation-timing-function(ease);
+  // @include animation-iteration-count(infinite);}
 
 
