--- a/app/views/home/products.html.erb
+++ b/app/views/home/products.html.erb
@@ -1,4 +1,7 @@
 <h1>Products</h1>
+ 
+   <%= image_tag "craftbtl.jpeg", height: "150px" , width: "45%" %>
+    <%= image_tag "craftpint.jpeg", height: "150px" , width: "45%" %>
 <div class="beerlogos">
 		<%= image_tag "amstel.jpeg", width: "50px", :id =>"amstel" %>
 		<%= image_tag "bluemoon.jpeg", width: "50px", :id =>"bluemoon" %>
@@ -31,4 +34,6 @@
 	<h3>
 		<a target="_blank" href="https://www.beermenus.com/places/5375-valley-stream-discount-beverage-center">Products/Pricing(click)</a>
 	</h3>
-	
+	<br>
+	<%= image_tag "pints.jpeg", height: "150px" , width: "47%" %>
+  	<%= image_tag "craftbeer.jpeg", height: "150px" , width: "45%" %>
