--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
   <div id="facebook">
     <a target="_blank" href="https://www.facebook.com/Valley-Stream-Discount-Beverage-Center-261336663979956/?fref=ts"><%= image_tag("facebook.jpeg", :id=>"fb", width: "100px") %>
   </div>
-  <%= image_tag "beerback3.jpeg", height: "150px" , width: "100%" %>  
+  <%= image_tag "craftmenu.jpeg", height: "150px" , width: "100%" %>  
 
 
   <div class="navigation-wrapper">
