--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -1,4 +1,18 @@
 <h1>VS Beverage welcomes you!</h1>
+<div class="welcome">
+<div id="cheers">
+<%= image_tag "cheers.jpg", width:"100%", :id=>"cheers" %>
+</div>
+<div id="gmap">
+
+<iframe
+  width="600"
+  height="450"
+  frameborder="0" style="border:0"
+  src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBjCZjbpo0ARIHpzjmRQGl8VDF1NI972oo
+    &q=855 W.Merrick, Valley Stream" allowfullscreen>
+</iframe>
+</div>
 
 <div class="side-image">
   <div class="images-wrapper">></div>
@@ -12,16 +26,9 @@
 		</p>
   </div>
 </div>
-
-<div id="gmap">
-<iframe
-  width="600"
-  height="450"
-  frameborder="0" style="border:0"
-  src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBjCZjbpo0ARIHpzjmRQGl8VDF1NI972oo
-    &q=855 W.Merrick, Valley Stream" allowfullscreen>
-</iframe>
 </div>
+
+
 
 
 
