--- a/app/views/home/email.html.erb
+++ b/app/views/home/email.html.erb
@@ -1,6 +1,6 @@
 
 <p>
-	<%= form_for home_contact_path do |f| %> 
+	<%= form_for home_email_path do |f| %> 
 
 <p class="contact">
 <%= f.label  :name, "name" %>
